# kontext-dev-app

./: .dockerignore  .env_template  .gitignore  .mdformat.toml  .pre-commit-config.yaml  DOCKER.md  Dockerfile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  tasks.py  test-docker-deployment.sh
.github/workflows/: docker-build-push.yml
Docker/Local/: Dockerfile.local  start.sh
Docker/Runpod/: Dockerfile.runpod  start.sh
static/: index.html  profiles.json  script.js  style.css
